<resources>
    <string name="app_name">Mobsoft</string>
    <string name="ipsum_1">Lorem ipsum dolor sit amet?</string>
    <string name="ipsum_2">Mauris pulvinar quam eget enim consequat bibendum. Quisque fermentum orci ipsum, fermentum congue tellus finibus nec.</string>
    <string name="answers_icon_description">Answers icon</string>
    <string name="zero">0</string>
    <string name="search">search</string>
    <string name="filter">filter</string>
    <string name="answers_placeholder">0 Answers</string>
    <string name="rating_icon_description">Rating icon</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="create_button_text">Create</string>
    <string name="username_hint">Username</string>
</resources>
