<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/ipsum_1"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_toLeftOf="@+id/answersCount"
        android:layout_toStartOf="@+id/answersCount"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ipsum_2"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_below="@+id/title"
        android:layout_toLeftOf="@+id/answersCount"
        android:layout_toStartOf="@+id/answersCount"
        android:layout_marginRight="64dp"
        android:layout_marginEnd="64dp"/>

    <TextView
        android:id="@+id/answersCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:layout_toLeftOf="@+id/answersIcon"
        android:layout_toStartOf="@+id/answersIcon"
        android:layout_centerVertical="true"/>

    <ImageView
        android:id="@+id/answersIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_chat_bubble_black_24dp"
        android:contentDescription="@string/answers_icon_description"
        android:layout_alignBottom="@+id/description"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"/>



</RelativeLayout>
