<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_answers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hu.bme.aut.mobsoft.lab.mobsoft.ui.answers.list.AnswersActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:id="@+id/question_details_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/question_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ipsum_1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/question_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ipsum_2"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/answers_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answers_placeholder"
            android:layout_marginTop="16dp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FF000000"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/answers_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        tools:listitem="@layout/list_row_answer"/>
</LinearLayout>
